# pulverization-hot-warm-cold

./: .gitignore  Dockerfile  build.gradle.kts  docker-compose.yml  settings.gradle.kts
.docker/: entrypoint.sh
app/: build.gradle.kts
app/src/androidTest/kotlin/it/nicolasfarabegoli/hotwarmcold/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/it/nicolasfarabegoli/hotwarmcold/: AndroidPulverizationManager.kt  BluetoothHandler.kt  BluetoothManager.kt  ListAdapter.kt  MainActivity.kt  PermissionsUtility.kt
app/src/main/kotlin/it/nicolasfarabegoli/hotwarmcold/components/: Sensor.kt
app/src/main/kotlin/it/nicolasfarabegoli/hotwarmcold/config/: Configuration.kt
app/src/main/res/layout/: activity_main.xml  rssi_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/kotlin/it/nicolasfarabegoli/hotwarmcold/: ExampleUnitTest.kt
common/: build.gradle.kts
common/src/commonMain/kotlin/it/nicolasfarabegoli/hotwarmcold/components/: Actuator.kt
common/src/commonMain/kotlin/it/nicolasfarabegoli/hotwarmcold/config/: Configuration.kt
esp32-bluetooth-arduino/src/: main.cpp
esp32-bluetooth-firmware/: Cargo.toml  sdkconfig.defaults
esp32-bluetooth-firmware/src/: main.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hotwarmcold-platform/: build.gradle.kts
hotwarmcold-platform/src/jvmMain/kotlin/it/nicolasfarabegoli/hotwarmcold/antenna/: BehaviourUnit.kt
hotwarmcold-platform/src/jvmMain/kotlin/it/nicolasfarabegoli/hotwarmcold/smartphone/: BehaviourUnit.kt
rpi-bluetooth/: .gitignore  Cargo.toml
rpi-bluetooth/.cargo/: config.toml
rpi-bluetooth/src/: main.rs
(+8 files in other folders)
