[package]
name = "esp32-bluetooth-firmware"
version = "0.1.0"
authors = ["Nicolas Farabegoli <nicolas.farabegoli@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.0", features = ["binstart"] }
esp32-nimble = "0.0.5"

[build-dependencies]
embuild = "0.30.4"
