[package]
name = "hot-warm-cold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
tokio = { version = "1.14", features = ["rt", "macros", "io-util", "io-std", "net"] }
bluer = { version = "0.15.5", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
futures = { version = "0.3.25" }
env_logger = "0.10.0"
